# zar

./: .gitignore  AGENTS.md  LICENSE  Makefile.conf  Q.v  R.v  README.md  _CoqProject  aCPO.v  binomial.v  cocwp.v  cocwp_facts.v  coin.v  colist.v  compile.v  cotree.v  cpGCL.v  cpGCLNotations.v  cpo.v  cwp.v  cwp_tcwp.v  debias.v  dep.v  die.v  dueling_coins.v  eR.v  equidistribution.v  findist.v  gaussian.v  gaussian_backup.v  geometric.v  geometric_series.v  gp.v  hare.v  hare_simple.v  itree.v  misc.v  mu.v  observe_loop.v  ocamlzar.v  (+14 more)
archive/: coreal.v  gaussian_backup.v
examples/: binomial.v  coin.v  die.v  dueling_coins.v  geometric.v  gp.v  hare.v  hare_simple.v  observe_loop.v  test.v  tutorial.v  uniform_lazy.v  uniform_sampler.v
extract/bernoulli_exponential/: a.out  analyze.py  driver.ml  sampler.ml
extract/binomial/: Makefile  a.out  analyze.py  binomial.ml  binomial.mli  driver.ml
extract/coin/: Makefile  analyze.py  driver.ml
extract/die/: Makefile  a.out  analyze.py  driver.ml  sampler.mli
extract/dueling_coins/: Makefile  a.out  analyze.py  driver.ml  dueling_coins.ml
extract/exponential/: Makefile  driver.ml  exponential.ml
python/zar/: LICENSE  Makefile  README.md  how_to_build_upload.txt  pyproject.toml  setup.py
python/zar/ocaml/: dune  sampler.ml  samplers.ml  zarpy.ml
python/zar/test/: test.py
python/zar/zarpy/: __init__.py
theories/: R.v  axioms.v  cocwp.v  compile.v  cpGCL.v  cwp.v  eR.v  findist.v  gaussian.v  itree.v  mu.v  ocamlzar.v  order.v  prelude.v  tactics.v  tcwp.v  tree.v  uniform.v  uniform_Z.v
(+99 files in other folders)
